--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="3.1">
     <servlet>
         <servlet-name>MainController</servlet-name>
-        <servlet-class>com.RenGu.servlert.MainController</servlet-class>
+        <servlet-class>com.RenGu.servlert.LoginController</servlet-class>
     </servlet>
 
     <servlet-mapping>
