--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -66,7 +66,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>DeleteStacksController</servlet-name>
-        <url-pattern>/deleteStacksController</url-pattern>
+        <url-pattern>/deleteStacks</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
